QC-113:- Added internal login API - Added Study creation API - Added Locality code API - Added Batter API - - Added Workflow API - Added creating test block API - Added Setting battery API - Added finishing the step API -- Added workflow state API - Added Publish workflow API - Added Creating visitschedule API - Added add study to role API - - Added Login as external users API - Added generate workflowinstance API - Added BeginWorkflow API - Added generatenext state API - Added InsertEmptyAssessment API - Added GetBatteryAssessee API - Added GetBatteryConfiguration1 API - Added all the update battery API total 12 of them - Added getnext state API - Added outcome validation API -Added qualification status API - Added Participant qualification API - Added assessment attempT API - Added r-process workflow API

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -3278,6 +3278,18 @@
       <UserCode>true</UserCode>
       <id>883c101e-52a9-4a66-8a78-18af703808f9</id>
     </Compile>
+    <Compile Include="setFinishStatus.cs">
+      <BoundTo>6fdf1357-20ab-46d2-8624-40be7dad800b</BoundTo>
+      <DependentUpon>setFinishStatus.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>b3251118-0666-4ae7-b520-09ca59ed8d1f</id>
+    </Compile>
+    <Compile Include="setFinishStatus.UserCode.cs">
+      <BoundTo>6fdf1357-20ab-46d2-8624-40be7dad800b</BoundTo>
+      <DependentUpon>setFinishStatus.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>76d39055-6d97-4822-ad99-3747678abf15</id>
+    </Compile>
     <Compile Include="StudiesPage\Click_Add_Study.cs">
       <id>b2a9c4de-daa4-49fa-be99-a68df1c8ba8f</id>
       <BoundTo>f211a17f-9981-4eec-9e4f-6dd3d3382cad</BoundTo>
@@ -5443,6 +5455,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>ae923f1d-ea09-404d-84db-f0e7e049c920</id>
       <recordtableid>b4546a75-f491-464e-b1d9-93673cd91198</recordtableid>
+    </None>
+    <None Include="setFinishStatus.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>6fdf1357-20ab-46d2-8624-40be7dad800b</id>
+      <recordtableid>e91633be-04bd-4eb7-a0db-4b2216152688</recordtableid>
     </None>
     <None Include="WorkflowCreation.rxrec">
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
