QC-118 - Added logic to create Integration User and assign API Key, this will allow faster flowing of study from RCC to CSP

--- a/eSourcePlatform/RedCapCloud/RedCapCloud/RedCapCloud.csproj
+++ b/eSourcePlatform/RedCapCloud/RedCapCloud/RedCapCloud.csproj
@@ -1220,6 +1220,42 @@
       <UserCode>true</UserCode>
       <id>313a66b0-d24c-4b81-99b3-c43c65e92224</id>
     </Compile>
+    <Compile Include="UsersPage\Add_IntegrationUser.cs">
+      <BoundTo>e421e155-c7cf-4fa4-8006-f24542a188c8</BoundTo>
+      <DependentUpon>Add_IntegrationUser.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>3bd93769-e9d1-4d45-ba16-2ce4e6be5a12</id>
+    </Compile>
+    <Compile Include="UsersPage\Add_IntegrationUser.UserCode.cs">
+      <BoundTo>e421e155-c7cf-4fa4-8006-f24542a188c8</BoundTo>
+      <DependentUpon>Add_IntegrationUser.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>f7dd6b3d-e56e-467e-bde2-384375ad0bff</id>
+    </Compile>
+    <Compile Include="UsersPage\Add_IntegrationUser_API_Key.cs">
+      <BoundTo>8fe985ea-c4b8-42b9-9fea-4fab81b0e5fe</BoundTo>
+      <DependentUpon>Add_IntegrationUser_API_Key.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>8db4268b-0ccb-42be-b6e6-5e2e820b8d87</id>
+    </Compile>
+    <Compile Include="UsersPage\Add_IntegrationUser_API_Key.UserCode.cs">
+      <BoundTo>8fe985ea-c4b8-42b9-9fea-4fab81b0e5fe</BoundTo>
+      <DependentUpon>Add_IntegrationUser_API_Key.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>70f2ed67-15bd-47ab-a3de-381601a60e9d</id>
+    </Compile>
+    <Compile Include="UsersPage\Click_Add_User.cs">
+      <BoundTo>145d367d-37d7-427f-9fd3-96082b8d1e21</BoundTo>
+      <DependentUpon>Click_Add_User.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>eb07236d-df08-4ffb-af96-63e2748b0bbb</id>
+    </Compile>
+    <Compile Include="UsersPage\Click_Add_User.UserCode.cs">
+      <BoundTo>145d367d-37d7-427f-9fd3-96082b8d1e21</BoundTo>
+      <DependentUpon>Click_Add_User.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>3c4825f8-ee2b-4d84-910d-bc40a9037916</id>
+    </Compile>
     <Compile Include="UsersPage\Click_Integration_User.cs">
       <BoundTo>2140c08d-f791-46fa-b82d-1143d11f4e3a</BoundTo>
       <DependentUpon>Click_Integration_User.rxrec</DependentUpon>
@@ -1876,6 +1912,21 @@
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>5b99876b-690f-47b3-a78e-9ef040320ebb</id>
       <recordtableid>14393025-d700-47c7-9152-6833ae9f4bed</recordtableid>
+    </None>
+    <None Include="UsersPage\Add_IntegrationUser.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>e421e155-c7cf-4fa4-8006-f24542a188c8</id>
+      <recordtableid>988336d3-722d-46bf-a658-6355e965e1a4</recordtableid>
+    </None>
+    <None Include="UsersPage\Add_IntegrationUser_API_Key.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>8fe985ea-c4b8-42b9-9fea-4fab81b0e5fe</id>
+      <recordtableid>99e3a789-7644-424b-a824-b5f2b74280fa</recordtableid>
+    </None>
+    <None Include="UsersPage\Click_Add_User.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>145d367d-37d7-427f-9fd3-96082b8d1e21</id>
+      <recordtableid>24fb6bd1-511f-4621-908d-33c70865effd</recordtableid>
     </None>
     <None Include="UsersPage\Click_Integration_User.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
