QC-113: Added a query that will run the CSP webjob from the script

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -2225,6 +2225,18 @@
       <RepositoryCode>true</RepositoryCode>
       <id>d90a74fb-3f62-4ea3-a885-cc4e0330a658</id>
     </Compile>
+    <Compile Include="CSPstoredProcedure.cs">
+      <BoundTo>acb16331-2f4f-48c9-9be5-7520aa064271</BoundTo>
+      <DependentUpon>CSPstoredProcedure.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>9a45c19e-44b1-463b-8cf0-68f973c535b6</id>
+    </Compile>
+    <Compile Include="CSPstoredProcedure.UserCode.cs">
+      <BoundTo>acb16331-2f4f-48c9-9be5-7520aa064271</BoundTo>
+      <DependentUpon>CSPstoredProcedure.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>77d4d17e-011d-429c-b7d3-3e476c809e68</id>
+    </Compile>
     <Compile Include="DatabaseModules\Check_Duplicate_Study.cs">
       <DependentUpon>Check_Duplicate_Study.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -4883,6 +4895,11 @@
       <id>bb77de91-48e5-4406-abc3-91f7ae6e5d00</id>
       <repoid>61ece0e2-4c32-4e54-80e0-7eeaa3e182b4</repoid>
       <reporootid>ad46f1c9-823e-493b-84e7-021e0749856a</reporootid>
+    </None>
+    <None Include="CSPstoredProcedure.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>acb16331-2f4f-48c9-9be5-7520aa064271</id>
+      <recordtableid>b9c5517e-46f0-42b7-a7db-8682ce58ff2e</recordtableid>
     </None>
     <None Include="csv\40yo_Tier1.csv">
       <id>e62144c0-2003-4112-aa31-4a09815d1286</id>
