QC-120 - Added Test Case to verify all 16 Tiers and Qual Status, making sure the scores are in the correct threshold

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -2213,6 +2213,18 @@
       <id>d6b468be-ad8e-452b-88dd-e2442e96ba5b</id>
       <BoundTo>9cb70b49-8647-4215-8393-80a87dc4900a</BoundTo>
     </Compile>
+    <Compile Include="DatabaseModules\Validate_16Tier_Threshold.cs">
+      <BoundTo>15a7c2d4-a10b-4f87-b997-d3b21756d70c</BoundTo>
+      <DependentUpon>Validate_16Tier_Threshold.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f3153d92-5c1b-43a2-8780-f0612404a6cb</id>
+    </Compile>
+    <Compile Include="DatabaseModules\Validate_16Tier_Threshold.UserCode.cs">
+      <BoundTo>15a7c2d4-a10b-4f87-b997-d3b21756d70c</BoundTo>
+      <DependentUpon>Validate_16Tier_Threshold.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>22f38f98-becb-4f6f-9982-ecac7b01a736</id>
+    </Compile>
     <Compile Include="DateTimeGenerator.cs">
       <id>72b0ce92-6c4c-4fdf-8df2-2fee9738a941</id>
     </Compile>
@@ -5142,6 +5154,11 @@
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <id>9cb70b49-8647-4215-8393-80a87dc4900a</id>
       <recordtableid>3eccf15a-aaec-4a30-be95-c20b92f6f4c2</recordtableid>
+    </None>
+    <None Include="DatabaseModules\Validate_16Tier_Threshold.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>15a7c2d4-a10b-4f87-b997-d3b21756d70c</id>
+      <recordtableid>dd61a28c-fae8-45fc-92bc-dbd87f49dbbd</recordtableid>
     </None>
     <None Include="ExtractsPage\Click_DownloadExtract_Button.rxrec">
       <id>304b93b0-7b72-4748-b038-66c5ca99150c</id>
