--- a/eSourcePlatform/EisiaProject/EisiaProject.csproj
+++ b/eSourcePlatform/EisiaProject/EisiaProject.csproj
@@ -17,6 +17,7 @@
     <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
     <IntermediateOutputPath>obj\$(Configuration)\</IntermediateOutputPath>
     <WarningLevel>4</WarningLevel>
+    <projectdefaultrepository>FAD4B666-61A7-42E4-8FB5-83F846E74D5E</projectdefaultrepository>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -125,6 +126,24 @@
     <Compile Include="AssemblyInfo.cs">
       <id>7d2504e6-07a1-487b-877c-3b6010c4a1ff</id>
     </Compile>
+    <Compile Include="EisiaProjectRepository.cs">
+      <BoundTo>FAD4B666-61A7-42E4-8FB5-83F846E74D5E</BoundTo>
+      <DependentUpon>EisiaProjectRepository.rxrep</DependentUpon>
+      <RepositoryCode>true</RepositoryCode>
+      <id>2fa73559-623b-4c90-8944-9fd8ae87be4a</id>
+    </Compile>
+    <Compile Include="internalUserCreation.cs">
+      <BoundTo>27eb098f-c08d-43b0-887b-252fe41bee2f</BoundTo>
+      <DependentUpon>internalUserCreation.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>299d22f6-bff2-412d-af40-184d7267ac16</id>
+    </Compile>
+    <Compile Include="internalUserCreation.UserCode.cs">
+      <BoundTo>27eb098f-c08d-43b0-887b-252fe41bee2f</BoundTo>
+      <DependentUpon>internalUserCreation.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>f270ddc3-0287-49d7-aa2b-a7bcbae1ead7</id>
+    </Compile>
     <Compile Include="Program.cs">
       <id>228a0dc4-6043-4db4-b077-1d253e634045</id>
     </Compile>
@@ -141,6 +160,49 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <id>f59139fe-2993-4809-8f05-c8199d78569b</id>
     </Content>
+    <Content Include="EisiaAuthentication.csv">
+      <Link>EisiaAuthentication.csv</Link>
+      <BoundTo>0561c5e1-143b-422d-a28a-4c898d8612db</BoundTo>
+      <DependentUpon>Eisia.rxtst</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>769013d2-3664-4254-af78-14c6d4e230e2</id>
+    </Content>
+    <None Include="EisiaProjectRepository.rximg">
+      <BoundTo>FAD4B666-61A7-42E4-8FB5-83F846E74D5E</BoundTo>
+      <DependentUpon>EisiaProjectRepository.rxrep</DependentUpon>
+      <imageblob>true</imageblob>
+      <id>f4e3ccde-a11c-4577-8186-1ae5c9b2defd</id>
+    </None>
+    <None Include="EisiaProjectRepository.rxrep">
+      <id>FAD4B666-61A7-42E4-8FB5-83F846E74D5E</id>
+      <repoid>63241ca1-2290-4a64-8445-99208b4b4586</repoid>
+      <reporootid>7e4fcf03-52d7-400f-bf8b-1d8af0398b10</reporootid>
+    </None>
+    <None Include="internalUserCreation.rxrec">
+      <BoundTo>FAD4B666-61A7-42E4-8FB5-83F846E74D5E</BoundTo>
+      <id>27eb098f-c08d-43b0-887b-252fe41bee2f</id>
+      <recordtableid>1bee9d53-0202-4ed0-9fb0-ef86560f3074</recordtableid>
+    </None>
+    <Content Include="PR_Authentication.csv">
+      <Link>PR_Authentication.csv</Link>
+      <BoundTo>0561c5e1-143b-422d-a28a-4c898d8612db</BoundTo>
+      <DependentUpon>Eisia.rxtst</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>7be6d435-e047-4930-b9c1-f0a6e927c617</id>
+    </Content>
+    <Content Include="JSON.csv">
+      <Link>JSON.csv</Link>
+      <BoundTo>0561c5e1-143b-422d-a28a-4c898d8612db</BoundTo>
+      <DependentUpon>Eisia.rxtst</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>f314ded4-8a0e-4e57-acf0-b6b45d72e85e</id>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CSP\CSP.csproj">
+      <Project>{A27B49D3-52B5-4D74-BD42-0AE2BD5C6144}</Project>
+      <Name>CSP</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(RanorexTargetsPath)" Condition="Exists('$(RanorexTargetsPath)')" />
